Refactor Hangman game code and enhance UI
- Updated CSS styles for improved layout and responsiveness.
- Changed class names to IDs for better specificity in styles.
- Added new button for "Next Word" functionality.
- Refactored game logic to use clearer variable names and methods.
- Improved user feedback with win and game over messages.
- Enhanced input handling and button interactions.
- Added confetti animation for winning state.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <div class="hangman__status">
                 <p id="statusMessage" aria-live="polite"></p>
                 <button id="restartBtn" class="is-hidden" aria-label="Play Again">Play Again</button>
+                <button id="nextBtn" aria-label="Next Word">Next Word</button>
             </div>
         </section>
     </div>
